@@ -2,3 +2,4 @@
 MyFreeCams - Add Pagination & Tags
 xhamster - fixed
 xhamster - category selection moved to context menu
+xozilla - fixed
